--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": " https://github.com/Bejeesh02/car-rental",
+  "homepage": "https://Bejeesh02.github.io/car-rental",
   "name": "rental",
   "version": "0.1.0",
   "private": true,
@@ -22,8 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predepaly":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predepaly": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
